--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,9 @@
 .logo-div {
-    height: 70px;
     margin: 1rem;
     margin-bottom: 3rem;
-    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
 }
 
 .logo {
@@ -17,19 +18,21 @@
 
 main {
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    height: 80%;
+    width: fit-content;
+}
+
+body {
+    height: 100vh;
 }
 
 header {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 header h1 {
     font-size: 46px;
-    text-align: center;
 }
 
 .all-text {
@@ -38,17 +41,30 @@ header h1 {
 
 .nav-links {
     display: flex;
+    flex-direction: column;
+    padding: 0;
+    text-align: center;
+    border: 2px solid black;
+    height: 100%;
+    
 
 }
 
 .nav-link {
     margin: 1rem;
     list-style: none;
+    font-size: 20px;
 }
 
 .nav-link:hover {
     cursor: pointer;
     transform: scale(1.05);
+    /* text-decoration: underline; */
+    font-weight: 900;
+}
+
+.navbar {
+    height: 100%;
 }
 
 .active-seasons-header {
@@ -70,4 +86,59 @@ header h1 {
 
 .active-seasons-list-item {
     list-style: none;
+    margin: 1rem;
+    border: 2px solid black;
+    font-size: 24px;
+    padding: 1rem;
+}
+
+.active-seasons-list {
+    padding: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.active-seasons-list-item:hover {
+
+}
+
+.team-div {
+    border: 1px solid black;
+    display: flex;
+    padding: 0.5rem;
+    align-items: center;
+    margin-left: 1rem;
+}
+
+.active {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 1rem;
+    height: 100%;
+    flex: 1;
+    justify-content: space-between
+}
+
+.team-id {
+    font-size: 20px;
+}
+
+.record {
+    margin: 1rem;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.next-game-info {
+    text-align: center;
+    font-weight: 700;
+    padding: 0;
+}
+
+.info-piece {
+    margin: 0.2rem;
 }
