--- a/public/styles.css
+++ b/public/styles.css
@@ -19,7 +19,7 @@
 main {
     display: flex;
     height: 80%;
-    width: fit-content;
+    width: 100%;
 }
 
 body {
@@ -64,7 +64,7 @@ header h1 {
 }
 
 .navbar {
-    height: 100%;
+    height: 95%;
 }
 
 .active-seasons-header {
@@ -75,42 +75,15 @@ header h1 {
     /* width: 60%; */
 }
 
-.seasons-display {
-    border: 2px solid black;
-    padding: 1rem;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.active-seasons-list-item {
-    list-style: none;
-    margin: 1rem;
-    border: 2px solid black;
-    font-size: 24px;
-    padding: 1rem;
-}
-
-.active-seasons-list {
-    padding: none;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.active-seasons-list-item:hover {
-
-}
 
 .team-div {
     border: 1px solid black;
     display: flex;
     padding: 0.5rem;
     align-items: center;
-    margin-left: 1rem;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .active {
@@ -118,9 +91,11 @@ header h1 {
     flex-direction: column;
     margin: auto;
     margin-top: 1rem;
-    height: 100%;
-    flex: 1;
-    justify-content: space-between
+    height: 95%;
+    justify-content: space-between;
+    width: 70%;
+    max-width: 750px;
+    margin-left: 1rem;
 }
 
 .team-id {
@@ -133,12 +108,20 @@ header h1 {
     font-weight: 900;
 }
 
+
+.info-piece {
+    margin: 0.2rem;
+    height: auto;
+}
+
+.team-block {
+    width: 12%;
+    text-align: center ;
+}
+
 .next-game-info {
     text-align: center;
     font-weight: 700;
     padding: 0;
-}
-
-.info-piece {
-    margin: 0.2rem;
+    width: 17%
 }
