--- a/public/styles.css
+++ b/public/styles.css
@@ -44,7 +44,7 @@ header h1 {
     flex-direction: column;
     padding: 0;
     text-align: center;
-    border: 2px solid black;
+    border-right: 2px solid black;
     height: 100%;
     
 
@@ -54,6 +54,8 @@ header h1 {
     margin: 1rem;
     list-style: none;
     font-size: 20px;
+    text-decoration: none;
+    color: black
 }
 
 .nav-link:hover {
@@ -65,6 +67,7 @@ header h1 {
 
 .navbar {
     height: 95%;
+    text-align: center;
 }
 
 .active-seasons-header {
@@ -77,13 +80,18 @@ header h1 {
 
 
 .team-div {
-    border: 1px solid black;
+    border: 2px solid black;
     display: flex;
     padding: 0.5rem;
     align-items: center;
     width: 100%;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+
+.team-div:hover {
+    cursor: pointer;
+    background-color: #F1F1F1;
 }
 
 .active {
@@ -124,4 +132,34 @@ header h1 {
     font-weight: 700;
     padding: 0;
     width: 17%
+}
+
+.standing {
+    margin: 1rem;
+}
+
+.schedule-div {
+    margin: 1rem;
+}
+
+.standings-table {
+    margin: 0;
+    padding: 0;
+    border-collapse: collapse;
+}
+
+.table-cell {
+    border: 1px solid black;
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    min-width: 25px;
+}
+
+.content {
+    /* display: flex; */
+}
+
+.schedule-table {
+    border-collapse: collapse;
 }
