--- a/public/styles.css
+++ b/public/styles.css
@@ -33,6 +33,7 @@ header {
 
 header h1 {
     font-size: 46px;
+    margin-left: 2rem;
 }
 
 .all-text {
@@ -46,7 +47,7 @@ header h1 {
     text-align: center;
     border-right: 2px solid black;
     height: 100%;
-    
+    overflow-y: auto;
 
 }
 
@@ -82,9 +83,11 @@ header h1 {
 .team-div {
     border: 2px solid black;
     display: flex;
-    padding: 0.5rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
     align-items: center;
-    width: 100%;
+    width: 95%;
     justify-content: space-between;
     flex-wrap: wrap;
 }
@@ -97,13 +100,16 @@ header h1 {
 .active {
     display: flex;
     flex-direction: column;
-    margin: auto;
     margin-top: 1rem;
     height: 95%;
-    justify-content: space-between;
-    width: 70%;
-    max-width: 750px;
-    margin-left: 1rem;
+    /* justify-content: space-between; */
+    width: 65%;
+    max-width: 770px;
+    /* margin: 1rem; */
+    padding: 1rem;
+    overflow-y: auto;
+    scrollbar-color: rgba(0, 0, 0, 0);
+    overflow-x: hidden;
 }
 
 .team-id {
@@ -138,6 +144,14 @@ header h1 {
     margin: 1rem;
 }
 
+.standing h2 {
+    font-size: 30px;
+}
+
+.schedule-div h2 {
+    font-size: 30px;
+}
+
 .schedule-div {
     margin: 1rem;
 }
@@ -146,6 +160,7 @@ header h1 {
     margin: 0;
     padding: 0;
     border-collapse: collapse;
+    background-color: grey;
 }
 
 .table-cell {
@@ -162,4 +177,5 @@ header h1 {
 
 .schedule-table {
     border-collapse: collapse;
+    background-color: grey;
 }
